--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "VEsolutions chat app using socket.io",
   "dependencies": {
     "express": "^4.10.2",
+    "node.io": "^0.5.1",
     "socket.io": "^1.3.6"
   }
 }
